--- a/opencv_facedetect/document/install.txt
+++ b/opencv_facedetect/document/install.txt
@@ -55,3 +55,7 @@ http://www.sk-spell.sk.cx/compiling-leptonica-and-tesseract-ocr-with-mingwmsys
 	
 -- DLL Lib 를 .a 로 변환 하기
 	http://blog.daum.net/ezway/21
+	
+-- mingw 로 컴파일 완료 되어 있는 사이트!!
+	https://github.com/zdenop/tesseract-mingw
+	
