--- a/opencv_facedetect/document/install.txt
+++ b/opencv_facedetect/document/install.txt
@@ -59,3 +59,7 @@ http://www.sk-spell.sk.cx/compiling-leptonica-and-tesseract-ocr-with-mingwmsys
 -- mingw 로 컴파일 완료 되어 있는 사이트!!
 	https://github.com/zdenop/tesseract-mingw
 	
+--------------------------------------------------------
+* ubuntu 설치 하는 방법
+	http://karytech.blogspot.kr/2012/05/opencv-24-on-ubuntu-1204.html
+	
